# hello-rust

./: Cargo.toml
src/: lib.rs  main.rs
src/basic_examples/: greeting.rs
src/closure_examples/: basic.rs
src/match_examples/: basic.rs
src/new_examples/: args.rs  channel.rs  collections.rs  error.rs  file.rs  multiply.rs  path.rs  test.rs  thread.rs
src/swc_plugin_examples/: .gitignore  README.md
src/swc_plugin_examples/hello_world/: .swcrc  package.json
src/swc_plugin_examples/hello_world_plugin/: Cargo.toml  package.json
src/swc_plugin_examples/hello_world_plugin/fixture/smoke_test/: index.js  output.js
src/swc_plugin_examples/hello_world_plugin/src/: lib.rs
src/trait_examples/: mod.rs  with_trait.rs  without_trait.rs
